Corrected form on mobile

--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -3,7 +3,7 @@
     gap: 2rem;
 }
 .login-form-container{
-    width: 25%;
+    width: 75%;
     justify-self: center;
 }
 .form-group{
@@ -33,4 +33,10 @@
     background-color: black;
     color: white;
     border-color: white;
+}
+
+@media screen and (min-width: 992px){
+    .login-form-container{
+        width: 25%;
+    }
 }
